package com.myapp.interfaces;

public class Searchable {
}
