package com.myapp.interfaces;

public class Storable {
}
